# tosh

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  default.nix  flake.nix  meson.build
.nix-support/: clang-tools.nix
include/desh/: parser.hpp  repl.hpp
include/desh/builtins/: base.hpp  cd.hpp  check_args.hpp  echo.hpp  exec.hpp  exit.hpp  pwd.hpp  type.hpp
include/desh/parser/token/: backslash.hpp  base.hpp  expr.hpp  normal.hpp  quote.hpp  root.hpp
include/tosh/: common.hpp  error.hpp  parser.hpp  repl.hpp
include/tosh/ast/: base.hpp  parser.hpp
include/tosh/builtins/: base.hpp  cd.hpp  check_args.hpp  echo.hpp  env.hpp  exec.hpp  exit.hpp  pwd.hpp  type.hpp
include/tosh/parser/: parser.hpp  query.hpp
include/tosh/parser/ast/: backslash.hpp  base.hpp  expr.hpp  quote.hpp  redirect.hpp  root.hpp  text.hpp
include/tosh/parser/token/: backslash.hpp  base.hpp  expr.hpp  normal.hpp  quote.hpp  root.hpp
include/tosh/terminal/: ansi.hpp  cursor.hpp  document.hpp  event.hpp  terminal.hpp
include/tosh/terminal/event/: parser.hpp  queue.hpp  reader.hpp
include/tosh/utils/: buffer.hpp  env.hpp  node.hpp  path.hpp  queue.hpp  redirect.hpp  singleton.hpp  tree.hpp
src/: desh.cpp  error.cpp  main.cpp  meson.build  parser.cpp  repl.cpp  tosh.cpp
src/ast/: parser.cpp
src/builtins/: base.cpp  cd.cpp  check_args.cpp  echo.cpp  env.cpp  exec.cpp  exit.cpp  meson.build  pwd.cpp  type.cpp
src/parser/: meson.build  parser.cpp  query.cpp
src/parser/ast/: backslash.cpp  base.cpp  expr.cpp  quote.cpp  redirect.cpp  root.cpp  text.cpp
src/parser/token/: backslash.cpp  base.cpp  expr.cpp  normal.cpp  quote.cpp  root.cpp
src/terminal/: ansi.cpp  cursor.cpp  document.cpp  event.cpp  meson.build  terminal.cpp
src/terminal/event/: parser.cpp  reader.cpp
src/utils/: buffer.cpp  meson.build  path.cpp  redirect.cpp
tests/: event_reader.cpp  meson.build  parser_ast.cpp  test_terminal.cpp
tests/terminal/: meson.build
tests/terminal/event/: reader.cpp
tests/utils/: test_tree.cpp
